Github-actions-eks-ecr-project/kubernetes/base/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP # Internal service, not exposed externally
